--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       text-align: center;
       padding: 8px;
       background-color: darkgreen; /* Sets the background color of the headers to red */
-      color: white; /* Ensures the text color is white */
+      color: black; /* Ensures the text color is white */
       font-family: 'Times New Roman', Times, serif; /* Changes the font to Times New Roman */
     }
     td {
