--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Food Calendar</title>
-   <link rel="icon" type="image/x-icon" href="jonah.ico">
+   <link rel="icon" type="image/x-icon" href="jonah1.ico">
   <style>
     body {
       background-color: white;
