--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </script>
 </head>
 <body>
-  <img src="baby1.gif" alt="baby" class="header-image"> <!-- Update the path to where your jonah1.gif is stored -->
+  <img src="baby.gif" alt="baby" class="header-image"> <!-- Update the path to where your jonah1.gif is stored -->
 <div class="container">
   <table border="6">
     <thead>
